// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01 Demo from docs 1`] = `
"begin
  one
  two
end"
`;

exports[`02 Indent something 1`] = `
"abc
  d
e
>>> 
>>> 
>>> g
"
`;

exports[`03 Two kinds of indents 1`] = `
"---
> a
> bc
>   d
> e
---
"
`;

exports[`04 Edge cases for ensureNewLine() 1`] = `"line"`;

exports[`04 Edge cases for ensureNewLine() 2`] = `
"previous
line"
`;

exports[`04 Edge cases for ensureSkippedLine() 1`] = `
"
line"
`;

exports[`04 Edge cases for ensureSkippedLine() 2`] = `
"previous

line"
`;
